fixed validation errors, added margin-bottom to footer icon, centered testimonials block, solved problem with clipping of expertise block when it reaches 1600px width

--- a/src/styles/expertise.scss
+++ b/src/styles/expertise.scss
@@ -1,5 +1,6 @@
 .expertise {
   background-color: $c-white;
+  width: 100%;
   @include onLaptopLarge {
     padding: 0;
   }
