--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -125,4 +125,16 @@
     pointer-events: all;
 
   }
+
+  &__logo {
+    &--footer {
+      margin-bottom: 48px;
+      @include onTablet {
+        margin-bottom: 24px;
+      }
+      @include onLaptop {
+        margin: 0;
+      }
+    }
+  }
 }
