--- a/src/styles/testimonials.scss
+++ b/src/styles/testimonials.scss
@@ -53,6 +53,7 @@
     grid-column: 1 / -1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     row-gap: 24px;
     @include onTablet {
       row-gap: 30px;
